--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </video>
         
         <!-- Rohit Sharma Image -->
-        <img src="https://example.com/rohit-sharma.jpg" alt="Rohit Sharma" class="rohit-image">
+        <img src="https://postimg.cc/vDSyLScB" alt="Rohit Sharma" class="rohit-image">
 
         <!-- Telegram Join Button -->
         <a href="https://t.me/+avV8vpMfkOJmZDhl" class="join-btn" target="_blank">Join My Telegram Channel</a>
