--- a/index.html
+++ b/index.html
@@ -3,93 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream Player</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e0f7fa;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .header {
-            font-size: 24px;
-            font-weight: bold;
-            background: linear-gradient(to right, orange, blue);
-            -webkit-background-clip: text;
-            color: transparent;
-            padding: 10px 0;
-        }
-
-        .player-container {
-            background-color: #007bb5;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 720px;
-            margin: 20px auto;
-        }
-
-        .player {
-            width: 100%;
-            height: 400px;
-            border-radius: 8px;
-            background-color: #000;
-        }
-
-        .rohit-image {
-            width: 150px;
-            height: auto;
-            margin: 20px 0;
-            border-radius: 50%;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-
-        .join-btn {
-            background-color: #25d366;
-            color: #fff;
-            padding: 12px 30px;
-            font-size: 16px;
-            border-radius: 25px;
-            border: none;
-            cursor: pointer;
-            margin-top: 20px;
-            text-decoration: none;
-        }
-
-        .join-btn:hover {
-            background-color: #128c7e;
-        }
-
-        h1 {
-            color: #004d6b;
-        }
-    </style>
+    <title>Custom Video Player</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- Header with gradient text -->
-    <div class="header">
-        TEAMROHITOFFICIAL45_LIVE
-    </div>
+    <div class="video-container">
+        <div class="overlay-text">
+            TEAMROHITOFFICIAL45_LIVE
+        </div>
 
-    <div class="player-container">
-        <h1>Live Stream Player</h1>
-        
-        <!-- Player Section -->
-        <video id="player" class="player" controls>
-            <source src="your-m3u8-link-here.m3u8" type="application/x-mpegURL">
+        <video id="videoPlayer" class="video-player" controls>
+            <source src="your-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        
-        <!-- Rohit Sharma Image -->
-        <img src="https://postimg.cc/vDSyLScB" alt="Rohit Sharma" class="rohit-image">
 
-        <!-- Telegram Join Button -->
-        <a href="https://t.me/+avV8vpMfkOJmZDhl" class="join-btn" target="_blank">Join My Telegram Channel</a>
+        <div class="quality-selector">
+            <label for="quality">Select Video Quality:</label>
+            <select id="quality" onchange="changeQuality()">
+                <option value="720p">720p</option>
+                <option value="1080p">1080p</option>
+                <option value="480p">480p</option>
+            </select>
+        </div>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
