--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JW Player - TeamRohitOfficial45_Live</title>
+    <title>TeamRohitOfficial45_Live</title>
     <!-- Include JW Player Script -->
     <script src="https://cdn.jwplayer.com/libraries/your-jw-player-library-id.js"></script>
     <style>
