--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="author" content="unknown">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>TEAMROHITOFFICIAL45_LIVE</title>
+
+    <!-- External Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
     <!-- Plyr and HLS.js -->
     <link href="https://cdn.jsdelivr.net/npm/plyr@3.6.2/dist/plyr.css" rel="stylesheet">
@@ -19,112 +22,122 @@
     <style>
         /* Global styles */
         html, body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #ffffff, #15b4ff); /* White and blue gradient */
-            color: #333;
+            background-color: #ffffff; /* White background */
+            color: #333; /* Dark gray text */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .container {
+            text-align: center;
+            background: #ffffff;
+            border-radius: 20px;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1); /* Soft black shadow */
+            width: 100%;
+            max-width: 900px;
+            padding: 30px;
         }
 
         h1 {
-            text-align: center;
-            color: #15b4ff;
-            font-size: 2rem;
-            margin-top: 20px;
+            font-size: 2.5rem;
+            color: #0d6efd; /* Blue color for heading */
+            font-weight: 700;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         /* Video styles */
         video {
             width: 100%;
             max-width: 800px;
-            margin: 0 auto;
+            margin: 20px 0;
             display: block;
-            border-radius: 8px;
-            background-color: #000;
+            border-radius: 10px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1); /* Black shadow */
         }
 
         /* Loading spinner */
         .loading {
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 9999;
+            background: rgba(0, 0, 0, 0.7); /* Black overlay */
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 1000;
         }
 
         .loading-text {
-            color: #15b4ff;
-            font-size: 1.5rem;
+            color: #ffffff; /* White text */
+            font-size: 2rem;
+            font-weight: 600;
         }
 
-        .plyr__video-wrapper::after {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            z-index: 10;
-            content: '';
-            height: 50px;
-            width: 100px;
-            background: url('') no-repeat;
-            background-size: 100px, auto, auto;
-        }
-
-        /* Button styling */
+        /* Button Styling */
         .telegram-button {
-            display: block;
-            width: 80%;
-            max-width: 300px;
-            margin: 20px auto;
-            padding: 15px;
-            text-align: center;
-            background-color: #15b4ff;
-            color: #fff;
-            border-radius: 5px;
+            display: inline-block;
+            background-color: #0d6efd; /* Blue button */
+            color: white;
+            padding: 15px 30px;
             font-size: 1.2rem;
-            font-weight: bold;
+            font-weight: 500;
             text-decoration: none;
-            transition: background-color 0.3s ease;
+            border-radius: 50px;
+            margin-top: 20px;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* Shadow around button */
         }
 
         .telegram-button:hover {
-            background-color: #007bb5;
+            background-color: #004bb5; /* Darker blue on hover */
+            transform: translateY(-5px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2); /* Darker shadow on hover */
         }
 
         /* Media query for responsive design */
         @media (max-width: 768px) {
             h1 {
-                font-size: 1.5rem;
+                font-size: 2rem;
+            }
+            .telegram-button {
+                width: 100%;
             }
         }
+
     </style>
 
 </head>
 
 <body>
 
-    <!-- Title -->
-    <h1>TEAMROHITOFFICIAL45_LIVE</h1>
+    <!-- Main Container -->
+    <div class="container">
+        <!-- Title -->
+        <h1>TEAMROHITOFFICIAL45_LIVE</h1>
 
-    <!-- Loading Spinner -->
-    <div id="loading" class="loading">
-        <div class="loading-text">
-            <span>Loading</span>
-            <span>...</span>
+        <!-- Loading Spinner -->
+        <div id="loading" class="loading">
+            <div class="loading-text">Loading...</div>
         </div>
+
+        <!-- Video Player -->
+        <video id="player" autoplay controls crossorigin playsinline>
+            <source id="m3u8-url" src="" type="application/vnd.apple.mpegurl">
+        </video>
+
+        <!-- Telegram Channel Button -->
+        <a href="https://t.me/+avV8vpMfkOJmZDhl" class="telegram-button" target="_blank">JOIN MY TELEGRAM CHANNEL</a>
     </div>
-
-    <!-- Video Player -->
-    <video id="player" autoplay controls crossorigin playsinline>
-        <source id="m3u8-url" src="" type="application/vnd.apple.mpegurl">
-    </video>
-
-    <!-- Telegram Channel Button -->
-    <a href="https://t.me/+avV8vpMfkOJmZDhl" class="telegram-button" target="_blank">JOIN MY TELEGRAM CHANNEL</a>
 
     <script>
         // Set video source dynamically
