--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8; /* Light grey background for modern look */
-            color: #333; /* Dark gray text for readability */
+            background-color: #1d1d1d; /* Dark background for the whole page */
+            color: #ffffff; /* White text for contrast */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -37,16 +37,16 @@
         .container {
             text-align: center;
             width: 100%;
-            max-width: 1200px;
-            padding: 0 20px;
-            background-color: #ffffff; /* White container for clean contrast */
+            max-width: 1000px;
+            padding: 20px;
+            background-color: #333333; /* Dark gray container */
             border-radius: 15px;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3); /* Soft shadow for depth */
         }
 
         h1 {
             font-size: 3rem;
-            color: #005594; /* Mumbai Indians blue */
+            color: #1e90ff; /* Blue color for the heading */
             font-weight: 700;
             margin-bottom: 20px;
             text-transform: uppercase;
@@ -56,10 +56,11 @@
         /* Fullscreen Video Player */
         video {
             width: 100%;
-            height: 75vh; /* Full-width, responsive video */
+            max-width: 800px;
+            height: 450px; /* Fixed height for video */
             margin-bottom: 20px;
             border-radius: 15px;
-            box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2); /* Soft shadow */
+            box-shadow: 0 5px 30px rgba(0, 0, 0, 0.5); /* Stronger shadow for video */
         }
 
         /* Loading Spinner */
@@ -85,8 +86,8 @@
         /* Button Styling */
         .telegram-button {
             display: inline-block;
-            background-color: #ffcb00; /* Mumbai Indians yellow */
-            color: #005594; /* Mumbai Indians blue text */
+            background-color: #1e90ff; /* Blue background for button */
+            color: #ffffff; /* White text */
             padding: 15px 40px;
             font-size: 1.2rem;
             font-weight: 600;
@@ -98,7 +99,7 @@
         }
 
         .telegram-button:hover {
-            background-color: #f7b600; /* Slightly darker yellow on hover */
+            background-color: #4682b4; /* Darker blue on hover */
             transform: translateY(-5px);
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3); /* Stronger shadow on hover */
         }
