--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .container {
             text-align: center;
             width: 100%;
-            max-width: 1000px;
+            max-width: 800px; /* Set max-width for the container to reduce size */
             padding: 20px;
             background-color: #333333; /* Dark gray container */
             border-radius: 15px;
@@ -45,7 +45,7 @@
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 2.5rem; /* Slightly smaller font size */
             color: #1e90ff; /* Blue color for the heading */
             font-weight: 700;
             margin-bottom: 20px;
@@ -53,11 +53,11 @@
             letter-spacing: 2px;
         }
 
-        /* Fullscreen Video Player */
+        /* Centered Video Player */
         video {
             width: 100%;
-            max-width: 800px;
-            height: 450px; /* Fixed height for video */
+            max-width: 720px; /* Reduced max-width of video */
+            height: 400px; /* Reduced height of video */
             margin-bottom: 20px;
             border-radius: 15px;
             box-shadow: 0 5px 30px rgba(0, 0, 0, 0.5); /* Stronger shadow for video */
@@ -88,8 +88,8 @@
             display: inline-block;
             background-color: #1e90ff; /* Blue background for button */
             color: #ffffff; /* White text */
-            padding: 15px 40px;
-            font-size: 1.2rem;
+            padding: 12px 30px; /* Slightly smaller padding */
+            font-size: 1.1rem; /* Slightly smaller font size */
             font-weight: 600;
             text-decoration: none;
             border-radius: 30px;
@@ -107,10 +107,10 @@
         /* Media query for responsive design */
         @media (max-width: 768px) {
             h1 {
-                font-size: 2rem;
+                font-size: 1.8rem; /* Reduce heading size for smaller screens */
             }
             video {
-                height: 50vh; /* Reduce video height on smaller screens */
+                height: 300px; /* Further reduce video height on smaller screens */
             }
             .telegram-button {
                 width: 100%;
