--- a/index.html
+++ b/index.html
@@ -1,110 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TEAMROHITOFFICIAL45_LIVE</title>
-    <meta name="description" content="ENJOY FREE LIVE">
-    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
-    <meta name="author" content="unknown">
-    <link href="https://cdn.jsdelivr.net/npm/plyr@3.6.2/dist/plyr.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <title>Blue and Gold Iframe</title>
     <style>
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            background: #000;
-            font-family: Poppins, sans-serif;
-        }
-
-        .loading {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #000;
-            z-index: 9999;
+            height: 100vh;
+            background: linear-gradient(135deg, #003366, #ffd700); /* Blue and Gold gradient */
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        .loading-text {
-            color: #00b3ff;
-            font-family: 'Quattrocento Sans', sans-serif;
-            font-size: 24px;
-            animation: blur-text 1.5s infinite alternate;
-        }
-
-        @keyframes blur-text {
-            0% {
-                filter: blur(0);
-            }
-
-            100% {
-                filter: blur(4px);
-            }
+        iframe {
+            width: 80%;
+            height: 80%;
+            border: 5px solid #ffd700; /* Gold border */
         }
     </style>
 </head>
-
 <body>
-    <div class="loading" id="loading">
-        <div class="loading-text">Loading...</div>
-    </div>
-
-    <video id="player" autoplay controls crossorigin playsinline>
-        <source id="m3u8-url" src="" type="application/vnd.apple.mpegurl">
-    </video>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const maxvalue = urlParams.get("id");
-
-            if (maxvalue) {
-                document.getElementById("m3u8-url").setAttribute("src", maxvalue);
-            }
-
-            const player = document.getElementById("player");
-            const source = player.getElementsByTagName("source")[0];
-            const videoUrl = source.src;
-
-            if (Hls.isSupported() && videoUrl) {
-                const hls = new Hls();
-                hls.loadSource(videoUrl);
-                hls.on(Hls.Events.MANIFEST_PARSED, () => {
-                    const playerInstance = new Plyr(player, {
-                        quality: {
-                            default: hls.levels[0].height,
-                            options: hls.levels.map(level => level.height),
-                            forced: true,
-                            onChange: height => {
-                                const levelIndex = hls.levels.findIndex(level => level.height === height);
-                                if (levelIndex !== -1) {
-                                    hls.currentLevel = levelIndex;
-                                }
-                            }
-                        }
-                    });
-                });
-
-                hls.attachMedia(player);
-            } else {
-                new Plyr(player);
-            }
-
-            // Hide the loading screen after 1 second
-            setTimeout(() => {
-                document.getElementById('loading').style.display = 'none';
-            }, 1000);
-        });
-    </script>
+    <iframe src="https://drmlive.in/sports/Willow/" frameborder="0"></iframe>
 </body>
-
 </html>
